--- a/src/styles/Language.css
+++ b/src/styles/Language.css
@@ -14,7 +14,7 @@
   padding-top: max(env(safe-area-inset-top), 20px);
   padding-left: max(16px, env(safe-area-inset-left));
   padding-right: max(16px, env(safe-area-inset-right));
-  padding-bottom: max(env(safe-area-inset-bottom), 125px);
+  padding-bottom: max(env(safe-area-inset-bottom), 20px);
   max-width: min(428px, 100vw);
   margin: 0 auto;
   width: 100%;
